--- a/src/index.css
+++ b/src/index.css
@@ -277,4 +277,15 @@ body {
 	justify-content: center;
 	align-items: center;
 	margin: 10px 0;
+	flex-wrap: wrap;
+}
+
+.pointsCounter { 
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	margin: 10px 0;
+	font-size: 2rem;
+	font-weight: 700;
 }
