--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
-.App-logo {
-  animation: spin infinite 20s linear;
-	height: 80px;
-	
-}
+
 
 .App-header {
-  background-color: #eee;
-  padding: 20px;
+  /* background-color: #eee; */
+  /* padding: 20px; */
   color: black;
   text-align: center;
 }
@@ -15,15 +11,7 @@
   font-size: large;
 }
 
-@media only screen and (max-width: 600px) {
-  .App-logo {
-		height: 55px;
-		margin-right: 12px;
-	}
-	.App-header {
-		display: flex;
-	}
-}
+
 
 
 
