--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,114 @@
+:root {
+	--red: #C20008;
+	--yellow: #FBEE1F;
+}
 body {
-	margin: 0;
 	margin-bottom:50px;
-  padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+	margin: 0;
+	padding:0;
 }
+
+
 
 * {
   box-sizing: border-box;
 }
+h1{
+	font-size: 40px;
+}
 
+h2{
+	font-size: 30px;
+}
+
+p {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+	font-size: 17px;
+  line-height: 1.5;
+}
 body {
   margin: 0;
   padding: 0;
-  background: #eee;
+	/* background: #eee; */
+	
   font-family: sans-serif;
 }
 
-.container {
+/* NAVBAR */
+
+nav {
+	height: 70px;
+	/* border-bottom: 1px solid grey; */
+	display: flex;
+	padding: 5px;
+	margin-bottom: 30px;
+	background: black;
+}
+.app-logo-container {
+	height: 100%;
+}
+
+
+.App-logo {
+	height: 100%;
+	fill: white;
+}
+
+@media only screen and (max-width: 600px) {
+  .App-logo {
+		height: 55px;
+		margin-right: 12px;
+	}
+	.App-header {
+		display: flex;
+	}
+}
+
+.nav-menu {
+	display: flex;
+	align-items: center;
+	margin: 0 20px;
+}
+
+.nav-menu-item {
+	text-decoration: none;
+	font-weight: 700;
+	margin: 0 20px;
+	font-size: 1.6em;
+	color: white;
+}
+.nav-menu-item.is-active {
+	color: var(--red);
+}
+
+/* QUIZ */
+
+.quiz-app-container {
+	padding: 20px;
+}
+.quiz-container {
   position: relative;
   max-width: 800px;
-  margin: 0 auto;
-  background: #fff;
+  margin: 0;
+	background: #fff;
+	border: 1px solid grey;
   border-radius: 20px;
+}
+.topContainer {
+	display: flex;
+	flex-wrap: wrap;
+}
+.rightColumn {
+	min-width: 200px;
 }
 
 @media (min-width: 769px) {
@@ -226,6 +304,7 @@ body {
 	border: 3px solid black;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
+	height: fit-content;
 }
 
 .next-button:hover{
@@ -252,17 +331,19 @@ body {
 	background: #4bb543;
 }
 .correctAnswer.wrong {
-	background: #B33A3A;
+	background: #C20008;
 }
 
 .wikiContainer {
 	width: 100vw;
 	display: flex;
 	justify-content: center;
+	margin-top: 20px;
 }
 .wikiIframe {
 	width: 90%;
 	height: 500px;
+	border: 0px solid transparent;
 
 }
 
@@ -289,3 +370,15 @@ body {
 	font-size: 2rem;
 	font-weight: 700;
 }
+
+/* FAQ Page */
+
+.contentContainer {
+	display: flex;
+	justify-content: center;
+}
+
+.content{
+	max-width: 900px;
+}
+
