--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
 	--red: #C20008;
-	--yellow: #FBEE1F;
+	--yellow: #fce21b;
+	--card-radius: 0px;
+	--card-border: 4px solid black;
 }
 body {
 	margin-bottom:50px;
@@ -87,28 +89,47 @@ nav {
 	color: white;
 }
 .nav-menu-item.is-active {
-	color: var(--red);
+	color: var(--yellow);
 }
 
 /* QUIZ */
 
 .quiz-app-container {
 	padding: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 .quiz-container {
   position: relative;
   max-width: 800px;
   margin: 0;
 	background: #fff;
-	border: 1px solid grey;
-  border-radius: 20px;
+	border-radius: 20px;
+	border-radius: var(--card-radius);
+}
+.questionContainer {
+	margin: 0;
+	background: #fff;
+	border-radius: 20px;
+	border: 1px solid black;
+	border: var(--card-border);
+	border-radius: var(--card-radius);
+
 }
 .topContainer {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 }
 .rightColumn {
-	min-width: 200px;
+	/* min-width: 200px; */
+
+	padding: 0 40px;
+	width: 400px;
+}
+.leftColumn {
+	width: fit-content;
 }
 
 @media (min-width: 769px) {
@@ -123,10 +144,14 @@ nav {
 }
 
 .quizzBox {
-		width: fit-content;
-		padding: 2px;
-		border-radius: 20px;
-		color: white;
+	width: fit-content;
+	padding: 2px;
+	border-radius: 20px;
+	/* color: white; */
+	margin: 10px 0;
+	border-radius: var(--card-radius);
+	border: var(--card-border);
+
 }
 /* Quiz Component */
 .answerOptions {
@@ -144,7 +169,8 @@ nav {
 /* Question Component */
 .question {
   margin: 0;
-  padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+	padding: 0.5rem 2.5rem 1.5rem 2.5rem;
+	font-size: 1.4em;
 }
 
 /* AnswerOption Component */
@@ -152,11 +178,14 @@ nav {
   border-top: 1px solid #eee;
 }
 .answerOption:last-child {
-  border-radius: 0px 0px 20px 20px;
+	border-radius: 0px 0px 20px 20px;
+	border-radius: var(--card-radius);
+	
 }
 
 .answerOption:hover {
-  background-color: #eefbfe;
+	background-color: #eefbfe;
+	background-color: var(--yellow);
 }
 
 .radioCustomButton {
@@ -192,7 +221,9 @@ nav {
   vertical-align: middle;
   background: #fff;
   border: 1px solid #bbb;
-  border-radius: 50%;
+	border-radius: 50%;
+	/* border-radius: var(--card-radius); */
+	
   transition: all 0.3s;
 }
 
@@ -261,6 +292,7 @@ nav {
   width: 100%;
   height: 100%;
   background-image: linear-gradient(to top, #fed330 25%, rgba(0, 0, 0, 0) 40%);
+  background-image: linear-gradient(to top, var(--yellow) 25%, rgba(0, 0, 0, 0) 40%);
 
   position: absolute;
   left: 0;
@@ -295,13 +327,17 @@ nav {
   display: block;
   margin: 0 auto;
   border: none;
-  border-radius: 20px;
+	border-radius: 20px;
+	border-radius: var(--card-radius);
+	
   color: black;
   font-size: 30px;
   background: white;
   padding: 10px 25px;
   cursor: pointer;
 	border: 3px solid black;
+	border: var(--card-border);
+
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 	height: fit-content;
@@ -357,7 +393,7 @@ nav {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: 10px 0;
+	/* margin: 10px 0; */
 	flex-wrap: wrap;
 }
 
@@ -369,6 +405,8 @@ nav {
 	margin: 10px 0;
 	font-size: 2rem;
 	font-weight: 700;
+	font-size: 1.4em;
+	text-align: center;
 }
 
 /* FAQ Page */
